test(#S11P12D109-215) : 예매 Service Test 구현